# reverse-proxy

./: .gitignore  MODULE.bazel  Makefile  README.md  example.http  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: continuous-integration-compiled-golang.yaml  continuous-integration-compiled-rust.yaml  continuous-integration-golang.yaml  continuous-integration-java.yaml  continuous-integration-jvm-java.yaml  continuous-integration-jvm-kotlin.yaml  continuous-integration-kotlin.yaml  continuous-integration-microsoft-typescript.yaml  continuous-integration-python.yaml  continuous-integration-rust.yaml  continuous-integration-typescript.yaml  continuous-integration.yaml
.husky/: pre-commit
.turbo/cache/: 1b9f2d83b96c79ef-meta.json  1b9f2d83b96c79ef.tar.zst  6bc50ba55f2d7fb8-meta.json  6bc50ba55f2d7fb8.tar.zst
api/: index.go
docs/: README.md
languages/compiled/go.dev/: Makefile  go.work  go.work.sum
languages/compiled/go.dev/beego/: main.go
languages/compiled/go.dev/chi/: go.mod  main.go
languages/compiled/go.dev/echo/: Dockerfile  main.go
languages/compiled/go.dev/gin/: go.mod
languages/compiled/go.dev/gorilla/: go.mod  main.go
languages/compiled/go.dev/http/: README.md  main.go
languages/compiled/go.dev/server/http/: BUILD.bazel  Dockerfile  README.md  go.mod
languages/compiled/go.dev/server/http/terraform/: main.tf
languages/compiled/rust-lang.org/: Cargo.toml  Makefile
languages/compiled/rust-lang.org/gotham/: Cargo.toml
languages/compiled/rust-lang.org/hyper/: Cargo.toml
languages/compiled/rust-lang.org/server/gotham.rs/: Cargo.toml
languages/compiled/rust-lang.org/server/gotham.rs/src/: main.rs
languages/compiled/rust-lang.org/server/hyper.rs/: Cargo.toml
languages/compiled/rust-lang.org/server/hyper.rs/src/: main.rs
languages/compiled/rust-lang.org/server/rocket.rs/: Cargo.toml
languages/compiled/rust-lang.org/server/rocket.rs/src/: main.rs
languages/compiled/rust-lang.org/server/warp/: Cargo.toml
languages/compiled/rust-lang.org/server/warp/src/: main.rs
languages/compiled/rust-lang.org/warp/: Cargo.toml
languages/csharp/Yarp/: Program.cs  README.md
languages/go.dev/beego/: Dockerfile  go.mod  go.sum
languages/go.dev/chi/: Dockerfile  example.http  go.mod
languages/go.dev/echo/: Dockerfile  go.mod  go.sum
languages/go.dev/gin/: Dockerfile  go.mod  go.sum  main.go
languages/go.dev/gorilla/: Dockerfile
languages/go.dev/http/: Dockerfile  Makefile  go.mod  main.go  package.json
languages/go.dev/http/api/: index.go
languages/go.dev/http/terraform/: main.tf  main.tfvars
languages/java.com/spring-boot/: Dockerfile  build.gradle
languages/jvm/java.com/: README.md  build.gradle  settings.gradle
languages/jvm/java.com/helidon.io/: .gitignore  build.gradle  gradle.lockfile  package.json
languages/jvm/java.com/javalin.io/: build.gradle  gradle.lockfile  package.json
languages/jvm/java.com/micronaut.io/: build.gradle  gradle.lockfile  package.json  settings.gradle
languages/jvm/java.com/quarkus.io/: build.gradle  gradle.lockfile  package.json  settings.gradle
languages/jvm/java.com/spring-boot/: README.md
languages/jvm/java.com/spring.io/: build.gradle  gradle.lockfile  package.json
languages/jvm/kotlinlang.org/: build.gradle.kts  settings.gradle.kts
languages/jvm/kotlinlang.org/ktor/: README.md  build.gradle.kts
languages/jvm/kotlinlang.org/ktor.io/: Dockerfile  build.gradle.kts  gradle.lockfile
languages/jvm/kotlinlang.org/spring-boot/: build.gradle.kts
languages/jvm/kotlinlang.org/spring.io/: build.gradle.kts  gradle.lockfile
languages/jvm/scala-lang.org/akka/: .gitignore  build.sbt  example.http
languages/jvm/scala-lang.org/akka.io/: build.sbt
languages/jvm/scala-lang.org/http4s.org/: build.sbt
languages/jvm/scala-lang.org/play/: build.sbt
languages/jvm/scala-lang.org/playframework.com/: .gitignore  build.sbt
languages/kotlinlang.org/ktor/: Dockerfile  build.gradle.kts
languages/kotlinlang.org/spring-boot/: Dockerfile  README.md  build.gradle.kts
languages/microsoft/csharp/Yarp/: Yarp.csproj
languages/microsoft/typescriptlang.org/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
languages/microsoft/typescriptlang.org/node.js/next.js/src-tauri/: Cargo.toml  tauri.conf.json
languages/node.js/: package.json
languages/node.js/express/: package.json
languages/node.js/express/src/: server.ts
languages/node.js/fastify/: package.json
languages/node.js/hono/: package.json
languages/node.js/http/: package.json  vercel.json
languages/python.org/: Makefile  README.md
languages/python.org/fastapi/: BUILD.bazel  pyproject.toml  requirements.txt
languages/python.org/flask/: BUILD.bazel  pyproject.toml  requirements.txt
languages/python.org/http/: BUILD.bazel  Makefile
languages/python.org/pyramid/: Dockerfile  main.py  pyproject.toml  requirements.txt
languages/python.org/tonardo/: BUILD.bazel  README.md  main.py  pyproject.toml  requirements.txt
languages/rust-lang.org/actix/: Cargo.toml
languages/rust-lang.org/gotham/: Cargo.toml
languages/rust-lang.org/hyper/: Cargo.toml
languages/rust-lang.org/rocket/: Cargo.toml
languages/rust-lang.org/warp/: Cargo.toml
languages/rust.lang/: Cargo.toml
languages/rust.lang/actix/: Cargo.toml
languages/rust.lang/gotham/: Cargo.toml
languages/rust.lang/hyper/: Cargo.toml
languages/rust.lang/rocket/: Cargo.toml
languages/rust.lang/warp/: Cargo.toml
languages/scala-lang.org/akka/: build.sbt
languages/scala-lang.org/play/: build.sbt
languages/scala-lang.org/play/conf/: application.conf  routes
languages/typescriptlang.org/bun.sh/express.js/: README.md  package.json
languages/typescriptlang.org/bun.sh/fastify.dev/: README.md  index.ts  package.json
languages/typescriptlang.org/bun.sh/hono.dev/: package.json
languages/typescriptlang.org/bun.sh/http/: README.md  (+2 more)
(+211 files in other folders)
