module(
    name = "reverse_proxy",
    version = "0.0.1",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.59.0")

# Gazelle (binary only, no module extension)
bazel_dep(name = "gazelle", version = "0.47.0")

# Bazel Skylib (only if you actually need skylib in BUILD files)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")  # Use the latest stable version

# Go SDK via rules_go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
