[package]
name = "warp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "=0.4.2"
tokio = { version = "=1.47.1", features = ["full"] }
reqwest = { version = "=0.12.23", features = ["json"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
bytes = "=1.10.1"
