[package]
name = "warp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "=0.3.7"
tokio = { version = "=1.43.0", features = ["full"] }
reqwest = { version = "=0.12.12", features = ["json"] }
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.139"
bytes = "=1.10.0"
