load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "reverse_proxy_http",
    embed = [":reverse_proxy_http_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "reverse_proxy_http_lib",
    srcs = ["main.go"],
    importpath = "reverse_proxy_http",
    visibility = ["//visibility:private"],
)
