[package]
name = "reverse-proxy-hyper"
version = "0.0.1"
description = "A Reverse Proxy Server"
authors = ["hieudoanm <hieumdoan@gmail.com> (https://hieudoanm.github.io)"]
license = "GPL-3.0"
repository = "git+ssh://git@github.com/hieudoanm/reverse-proxy.git"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
anyhow = "=1.0.100"
bytes = "=1.10.1"
http-body-util = "=0.1.3"
hyper = { version = "=1.7.0", features = ["full"] }
hyper-util = { version = "=0.1.17", features = ["full"] }
tokio = { version = "=1.48.0", features = ["full"] }
url = "=2.5.7"  # For parsing URLs
