[package]
name = "reverse-proxy-warp"
version = "0.0.1"
description = "A Reverse Proxy Server"
authors = ["hieudoanm <hieumdoan@gmail.com> (https://hieudoanm.github.io)"]
license = "GPL-3.0"
repository = "git+ssh://git@github.com/hieudoanm/reverse-proxy.git"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
warp = { version = "=0.4.2", features = ["server"]}
tokio = { version = "=1.48.0", features = ["full"] }
reqwest = { version = "=0.12.24", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
bytes = "=1.11.0"
