[package]
name = "reverse-proxy-tauri"
version = "0.0.1"
description = "A Reverse Proxy App"
authors = ["you"]
license = "GPL-3.0"
repository = "git+ssh://git@github.com/hieudoanm/reverse-proxy.git"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.1" }

[dependencies]
serde_json = "=1.0.145"
serde = { version = "=1.0.228", features = ["derive"] }
log = "=0.4.28"
tauri = { version = "=2.9.1" }
tauri-plugin-log = "=2.7.0"
